<resources>
    <string name="app_name">SteamWorks</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_data">Downloading data</string>
    <string name="uploading_data">Uploading data</string>
    <string name="okay">Okay</string>
    <string name="home">Home Button Image</string>
    <string name="camera">Use Camera</string>
    <string name="drives"><u>Drives</u></string>
    <string name="drivesTypeHint">Type of Drive System</string>
    <string name="drivesSpeedHint">Speed in feet per second</string>
    <string name="defenseCanPlay">Can they play defense</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="highGoal"><u>High Goal</u></string>
    <string name="highGoalAbility">Ability To Shoot In High Goal</string>
    <string name="shooterType">Type Of Shooter</string>
    <string name="ballsPerSec">Fuel Per Second</string>
    <string name="ballsNumber">How many fuel in a cycle</string>
    <string name="cycleTime">Cycle Time (seconds)</string>
    <string name="shootRange">Maximum Shooting Range In Feet</string>
    <string name="shootPreferred">Preferred Place To Shoot From</string>
    <string name="highGoalAccuracy">Accuracy From High Goal (%)</string>
    <string name="ballsHopper">Can Pickup Fuel From Hopper</string>
    <string name="ballsFloor">Can Pickup Fuel From Floor</string>
    <string name="ballsHuman">Can Pickup Fuel From Human</string>
    <string name="ballRetrievalPreferred">Preferred Fuel Retrieval Location</string>
    <string name="ballCapacity">Maximum Fuel Capacity</string>
    <string name="gears"><u>Gears</u></string>
    <string name="gearsScore">Can Score Gears</string>
    <string name="gearsFloor">Can Pickup Gears From Floor</string>
    <string name="gearsFromRetrieval">Can Pickup Gears From Retrieval</string>
    <string name="gearsFromRetrievalPreffered">Preferred Gear Retrieval Location</string>
    <string name="floor">Floor</string>
    <string name="gearsRetrieval">Retrieval Zone</string>
    <string name="gearsScoreWhere">Where can they score gears</string>
    <string name="gearsPreferred">Preferred Gear Scoring Location</string>
    <string name="lowGoal"><u>Low Goal</u></string>
    <string name="lowGoalAbility">Ability To Shoot In Low Goal</string>
    <string name="cycleNumber">Number Of Cycles</string>
    <string name="scaling"><u>Scaling</u></string>
    <string name="scaleAbility">Ability To Scale</string>
    <string name="scalePlaces">Places They Can Scale From</string>
    <string name="scalePreferredPlace">Preferred Scale Place</string>
    <string name="other"><u>Other</u></string>
    <string name="autoAbilities">Auto Abilities</string>
    <string name="otherComments">Other comments</string>
    <string name="submit">Submit</string>
    <string name="scouterName">Scouter Name</string>
    <string name="teamNumber">Team Number</string>
    <string name="benchmark">Benchmark</string>
    <string name="scout">Scout</string>
    <string name="view">View</string>
    <string name="autoSection">Auto</string>
    <string name="crossedBase">Crossed Baseline</string>
    <string name="competition_year">2017</string>
    <string name="pref_name">Sparx-prefs</string>
    <string name="pref_scouter">scouterText</string>
    <string name="pref_team">teamNumber</string>
    <string name="pref_event">eventText</string>
    <string name="pref_event_key">eventTextKey</string>
    <string name="pref_event_filter">eventFilter</string>
    <string name="pref_events_cursor">eventsCursor</string>
    <string name="filter_on">Turn the event filter on?</string>
    <string name="filter_off">Turn the event filter off?</string>
    <string name="failure">Failure</string>
    <string name="event_download_failed">Did not successfully download Event list!</string>
    <string name="team_download_failed">Did not successfully download Team list!</string>
    <string name="benchmark_download_failed">Did not successfully download Benchmark!</string>
    <string name="picture_download_failed">Did not successfully download Pictures!</string>
    <string name="scouting_download_failed">Did not successfully download Scouting!</string>
    <string name="match_download_failed">Did not successfully download Match!</string>
    <string name="benchmark_upload_failed">"Did not successfully upload Benchmark data!"</string>
    <string name="picture_upload_failed">"Did not successfully upload Picture data!"</string>
    <string name="scouting_upload_failed">"Did not successfully upload Scouting data!"</string>
    <string name="please_wait_event_we_are_in_download">Please wait while Events we are in data is downloaded.</string>
    <string name="please_wait_event_download">Please wait while Event data is downloaded.</string>
    <string name="please_wait_team_download">Please wait while Team data is downloaded.</string>
    <string name="please_wait_benchmarking_download">Please wait while Benchmarking data is downloaded.</string>
    <string name="please_wait_pictures_download">Please wait while Pictures are downloaded.</string>
    <string name="please_wait_scouting_download">Please wait while Scouting data is downloaded.</string>
    <string name="please_wait_match_download">Please wait while Match data is downloaded.</string>
    <string name="please_wait_benchmarking_upload">Please wait while Benchmarking data is uploaded.</string>
    <string name="please_wait_picture_upload">Please wait while Picture data is uploaded.</string>
    <string name="please_wait_scouting_upload">Please wait while Scouting data is uploaded.</string>
    <string name="day_format">yyyy-MM-dd hh:mm:ss</string>
    <string name="number_of_hoppers_dumped">Number of Hoppers Dumped</string>
    <string name="gears_scored_in">Gears scored in</string>
    <string name="teleop">Teleop</string>
    <string name="number_of_gears_scored">Number Of Gears Scored</string>
    <string name="number_of_gears_delivered">Number Of Gears Delivered</string>
    <string name="number_of_gears_collected_from_floor">Number Of Gears Collected From Floor</string>
    <string name="number_of_gears_collected_from_human">Number Of Gears Collected From Human</string>
    <string name="fuel">Fuel</string>
    <string name="scores_high">Scores High?</string>
    <string name="never">Never</string>
    <string name="hopper">Hopper</string>
    <string name="human">Human</string>
    <string name="sometimes">Sometimes</string>
    <string name="often">Often</string>
    <string name="scores_low">Scores Low?</string>
    <string name="number_of_balls_scored_in_a_high_goal_cycle">Fuel Scored In A High Goal</string>
    <string name="number_of_times_collected_balls_from_human">Number Of Times Collected Fuel From Human</string>
    <string name="number_of_times_collected_balls_from_hopper">Number Of Times Collected Fuel From Hopper</string>
    <string name="number_of_times_collected_balls_from_floor">Number Of Times Collected Fuel From Floor</string>
    <string name="approximate_fuel_scored_in_a_low_goal">Fuel Scored In Low Goal</string>
    <string name="number_of_low_goal_cycles">Number Of Low Goal Cycles</string>
    <string name="high_goal_accuracy">High Goal Accuracy</string>
    <string name="number_of_balls_scored_in_high_goal">Number Of Balls In High Goal</string>
    <string name="poor">Poor</string>
    <string name="ok">OK</string>
    <string name="great">Great</string>
    <string name="end_game">End Game</string>
    <string name="did_they_scale">Did They Scale?</string>
    <string name="where_they_scaled_from">Where Did They Scale From?</string>
    <string name="match_scouted">Match Scouted</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="benchmarking_was_done">Benchmarking Was Done</string>
    <string name="refresh_events">Refresh Events</string>
    <string name="upload__benchmarking_data">Upload Benchmarking Data</string>
    <string name="upload_pictures">Upload Picures</string>
    <string name="upload_scouting_data">Upload Scouting Data</string>
    <string name="no_network">No Network</string>
    <string name="saved">Saved</string>
    <string name="try_again">Connect to a network and try again.</string>
    <string name="locally">Stored in local memory. Upload later.</string>
    <string name="using_backup">Using backup!</string>
    <string name="refresh_benchmark_data">Refresh Benchmark Data</string>
    <string name="refresh_pictures">Download Pictures</string>
    <string name="refresh_scouting_data">Refresh Scouting Data</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="team_not_benchmark">This Team Has Yet To Be Benchmarked</string>
    <string name="data_missing">No Data to show</string>
    <string name="benchmark_title">Benchmarking</string>
    <string name="scouting_title">Scouting</string>
    <string name="view_title">View</string>
    <string name="benchmark_not_done">Benchmarking Was Not Done</string>
    <string name="check_submit_buttom">The button was probably not checked.</string>
    <string name="check_submit_picture_buttom">The button was probably not checked or there was no picture taken of this team.</string>
    <string name="scouting_not_done">Scouting Was Not Done</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="team_3">Team 3</string>
    <string name="select_position">Select Position</string>
    <string name="issue_event_we_are_in">Issue getting event we are in list</string>
    <string name="X_TBA">X-TBA-App-Id</string>
    <string name="scout_screen_app">frc1126:scouting_screen-app-2017:</string>
    <string name="frc_1126">frc1126</string>
    <string name="team_selected">team selected</string>
    <string name="qualifications_match_number">Qualifications Match number</string>
    <string name="comments_required">Comments are required!</string>
    <string-array name="students">
        <item>Michael Anderson</item>
        <item>Tyler Armstrong</item>
        <item>Owen Aser</item>
        <item>Kevin Bates</item>
        <item>Sai Bommisetty</item>
        <item>Nick Canstronova</item>
        <item>Zack Charlebois</item>
        <item>Peter Compton</item>
        <item>Andrew D\'Ambrosio</item>
        <item>Adam Daniels</item>
        <item>Spenser Dewey</item>
        <item>Skyler Ferrante</item>
        <item>Justin Fici</item>
        <item>Jeffary Graf</item>
        <item>Jack Griebel</item>
        <item>James Hart</item>
        <item>Nathan Hunt</item>
        <item>Brian Jimenez</item>
        <item>Annabelle Kedley</item>
        <item>Amanda Longhenry</item>
        <item>Giovanni Mannino</item>
        <item>Olivia Markovitz</item>
        <item>Aaron Mayernik</item>
        <item>Ryan McVeigh</item>
        <item>Alex Monroe</item>
        <item>Ronan Moody</item>
        <item>Allison Morgan</item>
        <item>Tyler Mosher</item>
        <item>Ethen Nguyen</item>
        <item>Logan Ogden</item>
        <item>Nicolas Pietrantoni</item>
        <item>Darwinch Pray</item>
        <item>Peyton Roemer</item>
        <item>Justin Rogers</item>
        <item>Levi Seibert</item>
        <item>Mason Seibert</item>
        <item>Niko Stathopoulos</item>
        <item>Andrew Thompson</item>
        <item>David Tomer</item>
        <item>Emory Towne</item>
        <item>Liana Tutt</item>
        <item>Alessandria Vigneri</item>
    </string-array>
</resources>
