<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <item android:id="@+id/menu_updload_benchmarking"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/upload__benchmarking_data" />
    <item android:id="@+id/menu_updload_pictures"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/upload_pictures" />
    <item android:id="@+id/menu_updload_scouting"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/upload_scouting_data" />
    <item android:id="@+id/refresh_events"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/refresh_events"/>
    <item android:id="@+id/refresh_benchmark_data"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/refresh_benchmark_data" />
    <item android:id="@+id/refresh_pictures"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/refresh_pictures" />
    <item android:id="@+id/refresh_scouting_data"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/refresh_scouting_data" />
</menu>