<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner android:id="@+id/eventSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:drawable/btn_dropdown" />

    <ToggleButton
        android:id="@+id/blueSelectedToggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/my_btn_toggle"
        android:text="@string/toggleButton"
        android:textOff="@string/red_alliance"
        android:textOn="@string/blue_alliance"
        android:textColor="@color/colorWhite"/>

    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton android:id="@+id/team1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_1" />

        <RadioButton android:id="@+id/team2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_2" />

        <RadioButton android:id="@+id/team3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_3" />

    </RadioGroup>

    <Button
        android:id="@+id/selectStuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_position" />

</LinearLayout>