<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Screen" >

    <Spinner android:id="@+id/eventSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:drawable/btn_dropdown" />

    <AutoCompleteTextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scouterText"
        android:textSize="35sp"
        android:hint="@string/scouterName"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.,;0123456789 "
        android:layout_above="@+id/teamText"
        android:layout_marginBottom="20sp"/>

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamText"
        android:textSize="35sp"
        android:hint="@string/teamNumber"
        android:layout_above="@+id/benchmarkButton"
        android:inputType="number"
        android:layout_marginBottom="20sp"/>

    <Button android:text="@string/benchmark"
        android:id="@+id/benchmarkButton"
        android:layout_above="@+id/scoutButton"
        style="@style/BigButton"/>

    <Button android:text="@string/scout"
        android:id="@+id/scoutButton"
        android:layout_above="@+id/viewButton"

        style="@style/BigButton"/>

    <Button android:text="@string/view"
        android:id="@+id/viewButton"
        android:layout_alignEnd="@+id/scoutButton"
        android:layout_alignParentBottom="true"
        style="@style/BigButton"/>

</RelativeLayout>
