<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Screen">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton android:id="@+id/home"
            style="@style/HomeButton"/>

        <!-- Begin Auto Section -->
        <TextView android:text="@string/autoSection"
            style="@style/SectionText" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayLight2">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:labelFor="@+id/crossedBaseLineAutoInput"
                    android:text="@string/crossedBase"
                    style="@style/NormalTextView"/>

                <ToggleButton android:id="@+id/crossedBaseLineAutoInput"
                    style="@style/YesNoToggle"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:labelFor="@+id/hoppersDumpedAutoInput"
                    android:text="@string/number_of_hoppers_dumped"
                    style="@style/NormalTextView"/>

                <EditText android:id="@+id/hoppersDumpedAutoInput"
                    android:inputType="number"
                    style="@style/ShortEditText"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:text="@string/gears_scored_in"
                    style="@style/CheckBoxTextView"/>

                <CheckBox android:text="Left"
                    android:id="@+id/putGearLeftAuto"
                    style="@style/Checkbox"/>

                <CheckBox android:text="Center"
                    android:id="@+id/putGearCenterAuto"
                    style="@style/Checkbox"/>

                <CheckBox android:text="Right"
                    android:id="@+id/putGearRightAuto"
                    style="@style/Checkbox"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Begin Teleop Section -->

        <TextView android:text="@string/teleop"
            style="@style/SectionText"/>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayLight1">

            <TextView android:text="@string/gears"
                style="@style/HeaderText"/>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/gearsScoredTeleInput"
                    android:text="@string/number_of_gears_scored"
                    style="@style/NormalTextView"/>

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/gearsScoredTeleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/gearsDeliveredInput"
                    android:text="@string/number_of_gears_delivered"
                    style="@style/NormalTextView" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/gearsDeliveredInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/numberOfGearsFromFloorInput"
                    android:text="@string/number_of_gears_collected_from_floor"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/numberOfGearsFromFloorInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/numberOfGearsFromHumanInput"
                    android:text="@string/number_of_gears_collected_from_human"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/numberOfGearsFromHumanInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayLight2">

            <TextView android:text="@string/fuel"
                style="@style/HeaderText" />

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/scores_high"
                    style="@style/RadioTextView"/>

                <RadioGroup android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton android:id="@+id/scoresHighNeverAuto"
                        android:text="@string/never"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/scoresHighSometimesAuto"
                        android:text="@string/sometimes"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/scoresHighOftenAuto"
                        android:text="@string/often"
                        style="@style/RadioButton"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/scores_low"
                    style="@style/RadioTextView"/>

                <RadioGroup android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton android:id="@+id/scoresLowNeverAuto"
                        android:text="@string/never"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/scoresLowSometimesAuto"
                        android:text="@string/sometimes"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/scoresLowOftenAuto"
                        android:text="@string/often"
                        style="@style/RadioButton"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/numberOfBallsScoredHighGoalInput"
                    android:text="@string/number_of_balls_scored_in_a_high_goal_cycle"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/numberOfBallsScoredHighGoalInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/timesCollectedFromHumanInput"
                    android:text="@string/number_of_times_collected_balls_from_human"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/timesCollectedFromHumanInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/timesCollectedFromHopperInput"
                    android:text="@string/number_of_times_collected_balls_from_hopper"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/timesCollectedFromHopperInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/timesCollectedFromFloorInput"
                    android:text="@string/number_of_times_collected_balls_from_floor"
                    style="@style/NormalTextView"
                    android:layout_height="72dp" />

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/timesCollectedFromFloorInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/fuelScoredLowGoalCycleInput"
                    android:text="@string/approximate_fuel_scored_in_a_low_goal_cycle"
                    style="@style/NormalTextView"/>

                <EditText android:id="@+id/fuelScoredLowGoalCycleInput"
                    android:inputType="number"
                    style="@style/ShortEditText"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:labelFor="@+id/numberOfLowGoalCyclesInput"
                    android:text="@string/number_of_low_goal_cycles"
                    style="@style/NormalTextView"/>

                <com.sparx1126.steamworks.HorizontalNumberPicker
                    android:id="@+id/numberOfLowGoalCyclesInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_row="6" />

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/high_goal_accuracy"
                    style="@style/RadioTextView"/>

                <RadioGroup android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton android:id="@+id/highGoalAccuracyScoutPoor"
                        android:text="@string/poor"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/highGoalAccuracyScoutOk"
                        android:text="@string/ok"
                        style="@style/RadioButton"/>

                    <RadioButton android:id="@+id/highGoalAccuracyScoutGreat"
                        android:text="@string/great"
                        style="@style/RadioButton"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
        <TextView android:text="@string/end_game"
            style="@style/SectionText"/>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayLight1">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:labelFor="@+id/didTheyScale"
                    android:text="@string/did_they_scale"
                    style="@style/NormalTextView"/>

                <ToggleButton android:id="@+id/didTheyScale"
                    style="@style/YesNoToggle"/>

            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scaledFromWhereLinear">

                <TextView android:labelFor="@+id/scaledFromWhereInput"
                    android:text="@string/where_they_scaled_from"
                    style="@style/NormalTextView"/>

                <EditText android:id="@+id/scaledFromWhereInput"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.,;0123456789 "
                    style="@style/ShortEditText" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:labelFor="@+id/matchScouted"
                android:text="@string/match_scouted"
                style="@style/NormalTextView"/>

            <ToggleButton android:id="@+id/matchScouted"
                style="@style/YesNoToggle"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>